--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body {
   
   .card {
     background-color: rgba(150, 167, 142, 0.884);
+    width: 80%;
   }
    /* nav bar styling */
    .navigation-bar {
@@ -57,14 +58,23 @@ body {
     color: whitesmoke;
     font-family: "Kaushan Script", cursive;
   }
+
+  #get-pizza-order{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+  }
   
   /* form section styling */
   .form-section {
+      display: flex;
+      flex-direction: column;
     padding-right: 2rem;
     padding-left: 2rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
     align-items: center;
+    justify-content: center;
   }
 
   .col-md-3 {
